force-app/idp/examples/business-account-opening/objects/Account/fields/Annual_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Turnover__c</fullName>
    <label>Annual Turnover</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>