force-app/idp/examples/business-account-opening/objects/Account/fields/Date_Incorporated__c.field-meta.xml
<CustomField>
    <fullName>Date_Incorporated__c</fullName>
    <label>Date Incorporated</label>
    <type>Date</type>
</CustomField>