force-app/idp/examples/business-account-opening/objects/Account/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>