force-app/idp/examples/business-account-opening/objects/Account/fields/Tax_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reference_Number__c</fullName>
    <label>Tax Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>